crates/pg_syntax/tests/snapshots/postgres_regress/regproc@50.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regcollation('ng_catalog.\"POSIX\"');"
---
SelectStmt@0..42
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..19 "regcollation"
      Ascii40@19..20 "("
      AConst@20..40
        Sconst@20..40 "'ng_catalog.\"POSIX\"'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

