crates/pg_syntax/tests/snapshots/postgres_regress/regproc@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regrole('\"regress_regrole_test\"');"
---
SelectStmt@0..41
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..39
    FuncCall@7..39
      Ident@7..14 "regrole"
      Ascii40@14..15 "("
      AConst@15..39
        Sconst@15..39 "'\"regress_regrole_test\"'"
  Ascii41@39..40 ")"
  Ascii59@40..41 ";"

