crates/pg_syntax/tests/snapshots/postgres_regress/regproc@53.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regrole('Nonexistent');"
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..28
    FuncCall@7..28
      Ident@7..14 "regrole"
      Ascii40@14..15 "("
      AConst@15..28
        Sconst@15..28 "'Nonexistent'"
  Ascii41@28..29 ")"
  Ascii59@29..30 ";"

