crates/pg_syntax/tests/snapshots/postgres_regress/regproc@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regnamespace('Nonexistent');"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..19 "regnamespace"
      Ascii40@19..20 "("
      AConst@20..33
        Sconst@20..33 "'Nonexistent'"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

