crates/pg_syntax/tests/snapshots/postgres_regress/regproc@58.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regnamespace('foo.bar');"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..19 "regnamespace"
      Ascii40@19..20 "("
      AConst@20..29
        Sconst@20..29 "'foo.bar'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

