crates/pg_syntax/tests/snapshots/postgres_regress/regproc@6.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regclass('pg_class');"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..26
    FuncCall@7..26
      Ident@7..15 "regclass"
      Ascii40@15..16 "("
      AConst@16..26
        Sconst@16..26 "'pg_class'"
  Ascii41@26..27 ")"
  Ascii59@27..28 ";"

