crates/pg_syntax/tests/snapshots/postgres_regress/regproc@60.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regoperator('++(int4,int4)');"
---
SelectStmt@0..39
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..37
    FuncCall@7..37
      Ident@7..21 "to_regoperator"
      Ascii40@21..22 "("
      AConst@22..37
        Sconst@22..37 "'++(int4,int4)'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

