crates/pg_syntax/tests/snapshots/postgres_regress/regproc@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regproc('know');"
---
SelectStmt@0..26
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..24
    FuncCall@7..24
      Ident@7..17 "to_regproc"
      Ascii40@17..18 "("
      AConst@18..24
        Sconst@18..24 "'know'"
  Ascii41@24..25 ")"
  Ascii59@25..26 ";"

